--- a/pallets/trustless-eth-bridge/leaf-provider/Cargo.toml
+++ b/pallets/trustless-eth-bridge/leaf-provider/Cargo.toml
@@ -31,7 +31,7 @@ beefy-merkle-tree = { git = "https://github.com/sora-xor/substrate.git", branch 
 beefy-primitives = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 
 bridge-types = { path = "../types", default-features = false }
-ethabi = { version = "17.1.0", default-features = false }
+ethabi = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi", default-features = false }
 
 [dev-dependencies]
 sp-keyring = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
