--- a/pallets/eth-bridge/Cargo.toml
+++ b/pallets/eth-bridge/Cargo.toml
@@ -24,7 +24,7 @@ once_cell = { version = "1.5.2", default-features = false, features = [
     'alloc',
     'unstable',
 ] }
-rlp = { version = "0.4.6", default-features = false }
+rlp = { version = "0.5.2", default-features = false }
 rustc-hex = { version = "2.1.0", default-features = false }
 serde = { version = "1.0", features = [
     "alloc",
@@ -38,12 +38,10 @@ pallet-scheduler = { git = "https://github.com/sora-xor/substrate.git", branch =
 pallet-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 
 bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "polkadot-v0.9.31", package = "pallet-multisig", default-features = false }
-ethabi = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi", default-features = false, features = [
-    "alloc",
-] }
+ethabi = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi", default-features = false }
 ethabi-contract = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi-contract", default-features = false }
 ethabi-derive = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi-derive", default-features = false }
-ethereum-types = { version = "0.13.1", default-features = false, features = [
+ethereum-types = { version = "0.14.0", default-features = false, features = [
     'serialize',
     'codec',
 ] }
