--- a/pallets/trustless-eth-bridge/channel/inbound/Cargo.toml
+++ b/pallets/trustless-eth-bridge/channel/inbound/Cargo.toml
@@ -16,7 +16,7 @@ codec = { version = "3", package = "parity-scale-codec", default-features = fals
 ] }
 scale-info = { version = "2", default-features = false, features = ["derive"] }
 hex-literal = { version = "0.3.1", optional = true }
-rlp = { version = "0.5", default-features = false, optional = true }
+rlp = { version = "0.5.2", default-features = false, optional = true }
 
 frame-benchmarking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false, optional = true }
 frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
@@ -32,7 +32,7 @@ traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library
 technical = { path = "../../../technical", default-features = false }
 
 bridge-types = { path = "../../types", default-features = false }
-ethabi = { version = "17.0.0", default-features = false }
+ethabi = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi", default-features = false }
 once_cell = { version = "1.5.2", default-features = false, features = [
     'alloc',
     'unstable',
@@ -47,7 +47,7 @@ common = { path = "../../../../common", features = ["test"] }
 currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies" }
 sp-keyring = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 hex-literal = { version = "0.3.1" }
-rlp = { version = "0.5" }
+rlp = { version = "0.5.2" }
 bridge-outbound-channel = { path = "../outbound", default-features = false }
 dispatch = { path = "../../dispatch", default-features = false }
 eth-app = { path = "../../eth-app", default-features = false }
