--- a/pallets/trustless-eth-bridge/erc20-app/Cargo.toml
+++ b/pallets/trustless-eth-bridge/erc20-app/Cargo.toml
@@ -14,7 +14,7 @@ codec = { version = "3", package = "parity-scale-codec", default-features = fals
 ] }
 scale-info = { version = "2", default-features = false, features = ["derive"] }
 hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
-rlp = { version = "0.5", default-features = false }
+rlp = { version = "0.5.2", default-features = false }
 hex-literal = { version = "0.3.1", default-features = false }
 
 frame-benchmarking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false, optional = true }
@@ -31,7 +31,7 @@ permissions = { path = "../../permissions", default-features = false }
 common = { path = "../../../common", default-features = false }
 technical = { path = "../../technical", default-features = false }
 
-ethabi = { version = "17.0.0", default-features = false }
+ethabi = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi", default-features = false }
 
 bridge-types = { path = "../types", default-features = false }
 
