--- a/pallets/trustless-eth-bridge/types/Cargo.toml
+++ b/pallets/trustless-eth-bridge/types/Cargo.toml
@@ -11,11 +11,11 @@ codec = { package = "parity-scale-codec", version = "3", default-features = fals
   "derive",
 ] }
 scale-info = { version = "2", default-features = false, features = ["derive"] }
-ethbloom = { version = "0.12.1", default-features = false, features = [
+ethbloom = { version = "0.13.0", default-features = false, features = [
   "rlp",
   "codec",
 ] }
-ethereum-types = { version = "0.13.1", default-features = false, features = [
+ethereum-types = { version = "0.14.0", default-features = false, features = [
   "codec",
   "rlp",
   "serialize",
@@ -24,7 +24,7 @@ hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
 hex-literal = { version = "0.3.1", default-features = false }
 libsecp256k1 = { version = "0.7", default-features = false }
 parity-bytes = { version = "0.1.2", default-features = false }
-rlp = { version = "0.5", default-features = false }
+rlp = { version = "0.5.2", default-features = false }
 serde = { version = "1.0.101", optional = true }
 getrandom = { version = "0.2.1", features = ["js"] }
 
@@ -36,8 +36,8 @@ sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkado
 sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 beefy-primitives = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 
-ethabi = { version = "17.1.0", default-features = false }
-ethash = { git = "https://github.com/sora-xor/ethash", branch = "sora-v1.6.0", default-features = false }
+ethabi = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi", default-features = false }
+ethash = { git = "https://github.com/sora-xor/ethash.git", branch = "sora-v1.6.0", default-features = false }
 serde_json = { version = "1.0", optional = true }
 
 [dev-dependencies]
