--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -31,20 +31,20 @@ clap = { git = "https://github.com/clap-rs/clap", rev = "56ed9981", features = [
   "derive",
 ] }
 async-trait = "0.1.56"
-rlp = "0.5.1"
+rlp = "0.5.2"
 triehash = "0.8.4"
 eth_trie = "0.1.0"
 keccak-hasher = "0.15.3"
 hex = "0.4.3"
 hex-literal = "0.3.4"
 futures = "0.3.17"
-ethash = { git = "https://github.com/sora-xor/ethash", branch = "sora-v1.6.0", default-features = false }
+ethash = { git = "https://github.com/sora-xor/ethash.git", branch = "sora-v1.6.0", default-features = false }
 log = "0.4.14"
 env_logger = "0.9.0"
 sha3 = { version = "0.10.0" }
 sha2 = "0.10.0"
 sha1 = "0.6.0"
-ethereum-types = { version = "0.13.1", features = ["serialize"] }
+ethereum-types = { version = "0.14.0", features = ["serialize"] }
 rayon = "1.5.1"
 serde = { version = "1.0.131", features = ["derive"] }
 serde_json = "1.0.73"
