--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -53,13 +53,17 @@ std = [
     'codec/std',
     "scale-info/std",
     'serde',
+    'secp256k1/std',
     'rustc-hex/std',
     'blake2-rfc/std',
     'num-traits/std',
     'frame-support/std',
     'frame-system/std',
     'fixnum/std',
+    'pallet-timestamp/std',
+    'sp-arithmetic/std',
     'sp-core/std',
+    'sp-io/std',
     'sp-runtime/std',
     'sp-std/std',
     'currencies/std',
