--- a/pallets/demeter-farming-platform/Cargo.toml
+++ b/pallets/demeter-farming-platform/Cargo.toml
@@ -39,19 +39,19 @@ hex-literal = "0.3.1"
 [dev-dependencies]
 assets = { path = "../assets" }
 common = { path = "../../common", features = ["test"] }
-ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
-demeter-farming-platform = { path = ".", default-features = false }
-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies", default-features = false }
-sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
-pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+ceres-liquidity-locker = { path = "../ceres-liquidity-locker" }
+demeter-farming-platform = { path = "." }
+currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies" }
+sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
+tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
 permissions = { path = "../permissions" }
-technical = { path = "../technical", default-features = false }
-pool-xyk = { path = "../pool-xyk", default-features = false }
+technical = { path = "../technical" }
+pool-xyk = { path = "../pool-xyk" }
 pswap-distribution = { path = "../pswap-distribution" }
-multicollateral-bonding-curve-pool = { path = "../multicollateral-bonding-curve-pool", default-features = false }
-dex-manager = { path = "../dex-manager", default-features = false }
-vested-rewards = { path = "../vested-rewards", default-features = false }
+multicollateral-bonding-curve-pool = { path = "../multicollateral-bonding-curve-pool" }
+dex-manager = { path = "../dex-manager" }
+vested-rewards = { path = "../vested-rewards" }
 
 [features]
 default = ["std"]
@@ -64,6 +64,13 @@ std = [
     "sp-core/std",
     "sp-runtime/std",
     "sp-std/std",
+    "pallet-timestamp/std",
+    "technical/std",
+    "trading-pair/std",
+    "pswap-distribution/std",
+    "common/std",
+    "assets/std",
+    "ceres-liquidity-locker/std",
 ]
 
 runtime-benchmarks = [
