XST buy-back and burn (#819)
Signed-off-by: Daniil Polyakov <arjentix@gmail.com>

--- a/pallets/mock-liquidity-source/Cargo.toml
+++ b/pallets/mock-liquidity-source/Cargo.toml
@@ -38,6 +38,7 @@ technical = { path = "../technical", default-features = false }
 sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+hex-literal = "0.3.1"
 
 common = { path = "../../common", features = ["test"] }
 dex-manager = { path = "../dex-manager" }
