--- a/pallets/liquidity-proxy/Cargo.toml
+++ b/pallets/liquidity-proxy/Cargo.toml
@@ -48,6 +48,7 @@ vested-rewards = { path = "../vested-rewards" }
 pool-xyk = { path = "../pool-xyk" }
 pswap-distribution = { path = "../pswap-distribution" }
 multicollateral-bonding-curve-pool = { path = "../multicollateral-bonding-curve-pool" }
+hex-literal = "0.3.1"
 
 
 [features]
