--- a/pallets/technical/Cargo.toml
+++ b/pallets/technical/Cargo.toml
@@ -38,6 +38,7 @@ trading-pair = { path = "../trading-pair", default-features = false, optional = 
 sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
+hex-literal = "0.3.1"
 
 common = { path = "../../common", features = ["test"] }
 dex-manager = { path = "../dex-manager" }
