--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -45,8 +45,9 @@ eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
 pswap-distribution-rpc = { path = "../pallets/pswap-distribution/rpc" }
 vested-rewards-rpc = { path = "../pallets/vested-rewards/rpc" }
 farming-rpc = { path = "../pallets/farming/rpc" }
-beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet" }
-beefy-light-client-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet" }
+beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy-verifier" }
+beefy-light-client-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy-verifier" }
+substrate-bridge-channel-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy-verifier" }
 
 # Parachain dependencies
 framenode-runtime = { path = "../runtime" }
@@ -101,7 +102,7 @@ sp-mmr-primitives = { git = "https://github.com/paritytech/substrate.git", branc
 prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
 beefy-gadget-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
 pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
-leaf-provider-rpc = { path = "../pallets/trustless-eth-bridge/leaf-provider/rpc" }
+leaf-provider-rpc = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier" }
 evm-bridge-proxy-rpc = { path = "../pallets/trustless-eth-bridge/evm-bridge-proxy/rpc" }
 bridge-channel-rpc = { path = "../pallets/trustless-eth-bridge/channel/rpc" }
 
