--- a/pallets/trustless-eth-bridge/channel/outbound/Cargo.toml
+++ b/pallets/trustless-eth-bridge/channel/outbound/Cargo.toml
@@ -31,7 +31,7 @@ permissions = { path = "../../../permissions", default-features = false }
 traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
 technical = { path = "../../../technical", default-features = false }
 
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier", default-features = false }
 ethabi = { version = "17.0.0", default-features = false }
 
 [dev-dependencies]
