--- a/pallets/trustless-eth-bridge/eth-app/Cargo.toml
+++ b/pallets/trustless-eth-bridge/eth-app/Cargo.toml
@@ -27,17 +27,17 @@ sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "po
 
 ethabi = { version = "17.0.0", default-features = false }
 
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier", default-features = false }
 
 assets = { path = "../../assets", default-features = false }
 traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
 technical = { path = "../../technical", default-features = false }
 permissions = { path = "../../permissions", default-features = false }
 common = { path = "../../../common", default-features = false }
-dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets", default-features = false, optional = true }
+dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier", default-features = false, optional = true }
 
 [dev-dependencies]
-dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets" }
+dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier" }
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
 pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
 permissions = { path = "../../permissions" }
