--- a/pallets/trustless-eth-bridge/evm-bridge-proxy/rpc/Cargo.toml
+++ b/pallets/trustless-eth-bridge/evm-bridge-proxy/rpc/Cargo.toml
@@ -23,4 +23,4 @@ sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkad
 
 evm-bridge-proxy-runtime-api = { path = "../runtime-api" }
 common = { path = "../../../../common" }
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets" }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier" }
