--- a/pallets/trustless-eth-bridge/evm-bridge-proxy/runtime-api/Cargo.toml
+++ b/pallets/trustless-eth-bridge/evm-bridge-proxy/runtime-api/Cargo.toml
@@ -18,7 +18,7 @@ serde = { version = "1.0.101", optional = true, features = ["derive"] }
 sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "generalize-pallets", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "beefy-verifier", default-features = false }
 
 [features]
 default = ["std"]
