--- a/pallets/liquidity-proxy/benchmarking/Cargo.toml
+++ b/pallets/liquidity-proxy/benchmarking/Cargo.toml
@@ -76,3 +76,8 @@ std = [
     "technical/std",
     "trading-pair/std",
 ]
+
+runtime-benchmarks = [
+    "frame-system/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+]
