--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -206,6 +206,7 @@ std = [
     "iroha-migration/std",
     "liquidity-proxy-runtime-api/std",
     "liquidity-proxy/std",
+    "liquidity-proxy-benchmarking/std",
     "mock-liquidity-source/std",
     "multicollateral-bonding-curve-pool/std",
     "pallet-aura/std",
@@ -275,7 +276,9 @@ runtime-benchmarks = [
     "ceres-governance-platform/runtime-benchmarks",
     "ceres-launchpad/runtime-benchmarks",
     "ceres-liquidity-locker-benchmarking",
+    "ceres-liquidity-locker-benchmarking/runtime-benchmarks",
     "demeter-farming-platform-benchmarking",
+    "demeter-farming-platform-benchmarking/runtime-benchmarks",
     "ceres-staking/runtime-benchmarks",
     "ceres-token-locker/runtime-benchmarks",
     "eth-bridge/runtime-benchmarks",
@@ -296,10 +299,12 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "iroha-migration/runtime-benchmarks",
     "liquidity-proxy-benchmarking",
+    "liquidity-proxy-benchmarking/runtime-benchmarks",
     "multicollateral-bonding-curve-pool/runtime-benchmarks",
     "multicollateral-bonding-curve-pool/runtime-benchmarks",
     "pallet-collective/runtime-benchmarks",
     "pool-xyk-benchmarking",
+    "pool-xyk-benchmarking/runtime-benchmarks",
     "price-tools/runtime-benchmarks",
     "pswap-distribution-benchmarking/runtime-benchmarks",
     "pswap-distribution/runtime-benchmarks",
