--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -20,7 +20,7 @@ codec = { package = "parity-scale-codec", version = "3", features = [
     "derive",
     "chain-error",
 ] }
-clap = { version = "3.0", features = ["derive"] }
+clap = { version = "4.0.9", features = ["derive"] }
 ansi_term = "0.12.1"
 serde = { version = "1.0.101", features = ["derive"] }
 serde_json = "1.0.61"
@@ -44,8 +44,8 @@ liquidity-proxy-rpc = { path = "../pallets/liquidity-proxy/rpc" }
 eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
 pswap-distribution-rpc = { path = "../pallets/pswap-distribution/rpc" }
 vested-rewards-rpc = { path = "../pallets/vested-rewards/rpc" }
-beefy-light-client= { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet-v0.9.31" }
-beefy-light-client-rpc= { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet-v0.9.31" }
+beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet-v0.9.31" }
+beefy-light-client-rpc = { git = "https://github.com/sora-xor/sora2-common.git", branch = "beefy_light_client_pallet-v0.9.31" }
 
 # Parachain dependencies
 framenode-runtime = { path = "../runtime" }
@@ -71,6 +71,7 @@ sc-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot
     "wasmtime",
 ] }
 sc-client-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
+sc-client-db = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 sc-executor = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", features = [
     "wasmtime",
 ] }
@@ -130,4 +131,5 @@ private-net = [
 runtime-benchmarks = [
     "frame-benchmarking-cli",
     "framenode-runtime/runtime-benchmarks",
+    "sc-client-db/runtime-benchmarks",
 ]
