--- a/node/chain_spec/Cargo.toml
+++ b/node/chain_spec/Cargo.toml
@@ -13,6 +13,7 @@ frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "p
 hex-literal = "0.3.1"
 sc-finality-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 sc-network = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
+sc-network-common = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 sc-service = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 sp-consensus-aura = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
 sp-consensus-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
