--- a/pallets/demeter-farming-platform/benchmarking/Cargo.toml
+++ b/pallets/demeter-farming-platform/benchmarking/Cargo.toml
@@ -78,3 +78,8 @@ std = [
     'permissions/std',
     'pool-xyk/std',
 ]
+
+runtime-benchmarks = [
+    "frame-system/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+]
