--- a/pallets/xst/Cargo.toml
+++ b/pallets/xst/Cargo.toml
@@ -27,6 +27,7 @@ serde = { version = "1.0.101", default-features = false, optional = true, featur
 sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
@@ -38,6 +39,7 @@ technical = { path = "../technical", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
 pool-xyk = { path = "../pool-xyk", default-features = false }
 pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+blake2 = { version = "0.10.5", default-features = false }
 
 [dev-dependencies]
 ceres-liquidity-locker = { path = "../ceres-liquidity-locker" }
@@ -66,6 +68,7 @@ std = [
     'sp-arithmetic/std',
     'sp-runtime/std',
     'sp-std/std',
+    'sp-core/std',
     'tokens/std',
     'pool-xyk/std',
     'pallet-timestamp/std',
@@ -75,6 +78,7 @@ std = [
     'liquidity-proxy/std',
     'dex-api/std',
     'common/std',
+    'blake2/std'
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
