--- a/pallets/xst/Cargo.toml
+++ b/pallets/xst/Cargo.toml
@@ -53,6 +53,7 @@ dex-manager = { path = "../dex-manager" }
 mock-liquidity-source = { path = "../mock-liquidity-source" }
 technical = { path = "../technical" }
 trading-pair = { path = "../trading-pair" }
+band = { path = "../band" }
 
 [features]
 default = ['std']
