XST floor price (#838)
Signed-off-by: Daniil Polyakov <arjentix@gmail.com>

--- a/pallets/xst/Cargo.toml
+++ b/pallets/xst/Cargo.toml
@@ -68,6 +68,7 @@ std = [
     'sp-std/std',
     'tokens/std',
     'pool-xyk/std',
+    'liquidity-proxy/std',
     'pallet-timestamp/std',
     'trading-pair/std',
     'technical/std',
