--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -74,6 +74,7 @@ vested-rewards = { path = "../pallets/vested-rewards", default-features = false 
 vested-rewards-runtime-api = { path = "../pallets/vested-rewards/runtime-api", default-features = false }
 xor-fee = { path = "../pallets/xor-fee", default-features = false }
 xst = { path = "../pallets/xst", default-features = false }
+xst-benchmarking = { path = "../pallets/xst/benchmarking", default-features = false, optional = true }
 
 # Substrate dependencies
 frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false, optional = true }
@@ -273,7 +274,7 @@ runtime-benchmarks = [
     "price-tools/runtime-benchmarks",
     "vested-rewards/runtime-benchmarks",
     "xor-fee/runtime-benchmarks",
-    "xst/runtime-benchmarks",
+    "xst-benchmarking",
 ]
 
 reduced-pswap-reward-periods = []
