--- a/pallets/xst/benchmarking/Cargo.toml
+++ b/pallets/xst/benchmarking/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/sora-xor/sora2-network"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
+codec = { package = "parity-scale-codec", version = "3", default-features = false }
 currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies", default-features = false }
 frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false  }
 frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false  }
@@ -27,6 +28,22 @@ technical = { path = "../../technical", default-features = false  }
 trading-pair = { path = "../../trading-pair", default-features = false  }
 band = { path = "../../band", default-features = false  }
 xst = {path = "../../xst", default-features = false  }
+
+[dev-dependencies]
+scale-info = { version = "2", default-features = false }
+sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
+tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens", default-features = false }
+assets = { path = "../../assets", default-features = false }
+dex-api = { path = "../../dex-api", default-features = false }
+pool-xyk = { path = "../../pool-xyk", default-features = false }
+pswap-distribution = { path = "../../pswap-distribution", default-features = false }
+demeter-farming-platform = { path = "../../demeter-farming-platform", default-features = false }
+ceres-liquidity-locker = { path = "../../ceres-liquidity-locker", default-features = false }
+common = { path = "../../../common", default-features = false, features = [
+    "test",
+] }
 
 [features]
 default = ["std"]
