--- a/pallets/trustless-eth-bridge/erc20-app/Cargo.toml
+++ b/pallets/trustless-eth-bridge/erc20-app/Cargo.toml
@@ -33,14 +33,14 @@ technical = { path = "../../technical", default-features = false }
 
 ethabi = { git = "https://github.com/sora-xor/ethabi.git", branch = "sora-v1.6.0", package = "ethabi", default-features = false }
 
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "substrate_bridge", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "develop", default-features = false }
 
-dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "substrate_bridge", default-features = false, optional = true }
+dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "develop", default-features = false, optional = true }
 bridge-outbound-channel = { path = "../channel/outbound", default-features = false, optional = true }
 
 [dev-dependencies]
 bridge-outbound-channel = { path = "../channel/outbound", default-features = false }
-dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "substrate_bridge" }
+dispatch = { git = "https://github.com/sora-xor/sora2-common", branch = "develop" }
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
 pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.31" }
 tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
