--- a/relayer/parachain-gen/Cargo.toml
+++ b/relayer/parachain-gen/Cargo.toml
@@ -12,7 +12,7 @@ subxt = "0.24.0"
 codec = { package = "parity-scale-codec", version = "3", features = ["derive"] }
 scale-info = { version = "2", features = ["derive"] }
 beefy-primitives = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31" }
-bridge-common = { git = "https://github.com/sora-xor/sora2-common.git", branch = "substrate_bridge", default-features = false }
+bridge-common = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
 jsonrpsee = { version = "0.14", features = [
     "macros",
     "ws-client",
@@ -22,5 +22,5 @@ sp-core = { git = "https://github.com/sora-xor/substrate.git", branch = "polkado
 sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.31", default-features = false }
 async-trait = "0.1.49"
 serde = { version = "1.0.137", features = ["derive"] }
-bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "substrate_bridge" }
-beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "substrate_bridge", default-features = false }
+bridge-types = { git = "https://github.com/sora-xor/sora2-common", branch = "develop" }
+beefy-light-client = { git = "https://github.com/sora-xor/sora2-common.git", branch = "develop", default-features = false }
