--- a/Cargo.toml
+++ b/Cargo.toml
@@ -205,7 +205,7 @@ beefy-gadget-rpc = { git = "https://github.com/sora-xor/substrate.git", branch =
 beefy-merkle-tree = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.25-leak-fix" }
 substrate-wasm-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadot-v0.9.25-leak-fix" }
 
-pallet-staking = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "polkadot-v0.9.25" }
+pallet-staking = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "polkadot-v0.9.25-lock-fix" }
 
 [workspace]
 members = [
