--- a/node/chain_spec/Cargo.toml
+++ b/node/chain_spec/Cargo.toml
@@ -23,7 +23,7 @@ sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "po
 serde = { version = "1.0.101", features = ["derive"] }
 serde_json = "1.0.61"
 
-bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "polkadot-v0.9.25", package = "pallet-multisig" }
+bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "polkadot-v0.9.25-lock-fix", package = "pallet-multisig" }
 
 common = { path = "../../common" }
 faucet = { path = "../../pallets/faucet", optional = true }
