Oracle proxy pallet (#829)
* cargo files

* added DataFeed trait

* added OracleProxy pallet

* added DataFeed support for Band pallet

* added rpc

* added oracle-proxy to runtime

* Fix std feature and some imports

Signed-off-by: Daniil Polyakov <arjentix@gmail.com>

* benchmark fix

* added weights

* fixed rpcs

* Update pallets/oracle-proxy/src/lib.rs

Co-authored-by: Daniil Polyakov <arjentix@gmail.com>

* added more generic name for error in DataFeed trait

* added newlines at the end of the files

* removed commented code

* fixed deps

* added OnNewSymbolRelayed and SymbolsInfoUpdate traits support

* fixed tests

* rerun benchmarks

* fixed weights.rs

* reverted chain_spec config

* fixes

* added error serialization in rpc calls

* wrapped up type definitions for oracle related pallets

* removed unused imports

* added From trait implementation for Rate

* added docs for hook

* fix naming

* removed unused imports

* update docs

Co-authored-by: Daniil Polyakov <arjentix@gmail.com>

* renamed functions

* created wrapping for Symbol type and moved serialization trait implementations to separate module

Signed-off-by: Daniil Polyakov <arjentix@gmail.com>
Co-authored-by: Daniil Polyakov <arjentix@gmail.com>
Co-authored-by: Nikita Smirnov <nikita.smirnov@soramitsu.co.jp>
Co-authored-by: Nikita Zaporozhets <95526886+f33r0@users.noreply.github.com>

--- a/pallets/band/Cargo.toml
+++ b/pallets/band/Cargo.toml
@@ -27,6 +27,7 @@ pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch 
 sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false }
 sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", default-features = false}
+oracle-proxy = { path = "../oracle-proxy", default-features = false }
 
 [features]
 default = ['std']
@@ -35,6 +36,7 @@ std = [
     "scale-info/std",
     "frame-support/std",
     "frame-system/std",
+    "oracle-proxy/std",
     "sp-std/std",
     "common/std",
 ]
