--- a/Cargo.toml
+++ b/Cargo.toml
@@ -237,6 +237,7 @@ members = [
     "pallets/vested-rewards",
     "pallets/xst",
     "pallets/price-tools",
+    "pallets/oracle-proxy",
     "pallets/trustless-eth-bridge/ethereum-light-client",
     "pallets/trustless-eth-bridge/basic-channel",
     "pallets/trustless-eth-bridge/basic-channel/rpc",
