--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -45,6 +45,7 @@ eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
 pswap-distribution-rpc = { path = "../pallets/pswap-distribution/rpc" }
 vested-rewards-rpc = { path = "../pallets/vested-rewards/rpc" }
 farming-rpc = { path = "../pallets/farming/rpc" }
+oracle-proxy-rpc = { path = "../pallets/oracle-proxy/rpc" }
 
 # Parachain dependencies
 framenode-runtime = { path = "../runtime" }
