--- a/.github/ISSUE_TEMPLATE/TECH_TASK.yml
+++ b/.github/ISSUE_TEMPLATE/TECH_TASK.yml
@@ -1,5 +1,5 @@
 name: Technical-Task
-description: A clear and comprehensive description the technical task that needs to be implemented.
+description: A clear and comprehensive description of the technical task that needs to be implemented.
 title: "[Tech]: "
 labels: ["tech"]
 
